data/derived/comb/progs/unify/prog2154.ml.out
Characters 46-64:
  else digitsOfInt (n/10) mod 10 :: [];;
       ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
